--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   ],
   "license": "Apache-2.0",
   "dependencies": {
-    "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-transform-exponentiation-operator": "^7.0.0",
     "@babel/plugin-transform-jscript": "^7.0.0",
@@ -32,7 +31,11 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.15",
     "object.assign": "^4.1.0"
   },
+  "peerDependencies": {
+    "@babel/core": "^7.0.0-0"
+  },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-import": "^2.13.0"
