--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "object.assign": "^4.1.0"
   },
   "peerDependencies": {
-    "@babel/core": "^7.0.0-0"
+    "@babel/core": "^7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
